@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200008, CPAN::Meta::Converter version 2.110930'
+generated_by: 'Dist::Zilla version 4.300000, CPAN::Meta::Converter version 2.112150'
 license: lgpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,7 +18,7 @@ name: Config-Model-TkUI
 recommends:
   Tk::ObjScanner: 0
 requires:
-  Config::Model: 1.244
+  Config::Model: 1.253
   Exception::Class: 0
   File::Slurp: 0
   Log::Log4perl: 1.11
@@ -26,4 +26,4 @@ requires:
   Tk: 0
   Tk::DirSelect: 0
   Tk::Tree: 0
-version: 1.325
+version: 1.326
